Sathya changes: 1. Job Status Table “Select All Checkbox” functionality. 2. Job status table alignment issue

--- a/app/static/app/content/my_style.css
+++ b/app/static/app/content/my_style.css
@@ -154,7 +154,7 @@
     padding: 10px 0px;
 }
 .scroller-text{
-   height: 450px;
+   height: 475px;
         
 }
 .runquote{
